--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ main{
 }
 
 #wrapper{
-  align-items: stretch;
+  align-items: center;
   margin: auto;
 }
 
@@ -17,5 +17,5 @@ main{
 button{
   font-family: sans-serif;
   font-size: 1.5em;
-  border: none;
+  border: 1px;
 }
